[gd_scene load_steps=7 format=3 uid="uid://5ua0i70iduxy"]

[ext_resource type="Script" path="res://gates/wireConnector/wireConnector.gd" id="1_td2it"]
[ext_resource type="Script" path="res://root/wireEnds.gd" id="2_xwpsc"]
[ext_resource type="Script" path="res://gates/uiPopOut.gd" id="3_nxki1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1pkk1"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y20as"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvpha"]

[node name="wireConnector" type="Node2D"]
script = ExtResource("1_td2it")

[node name="end2" type="RigidBody2D" parent="." groups=["pickable"]]
position = Vector2(25, 0)
input_pickable = true
mass = 0.01
gravity_scale = 0.0
freeze = true
script = ExtResource("2_xwpsc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="end2"]
shape = SubResource("CircleShape2D_1pkk1")

[node name="Sprite2D" type="Sprite2D" parent="end2"]
texture = SubResource("PlaceholderTexture2D_y20as")

[node name="Line2D" type="Line2D" parent="."]
z_index = -3

[node name="StaticBody2D" type="StaticBody2D" parent="Line2D"]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line2D/StaticBody2D"]
shape = SubResource("RectangleShape2D_rvpha")

[node name="end1" type="RigidBody2D" parent="." groups=["pickable"]]
input_pickable = true
mass = 0.01
gravity_scale = 0.0
freeze = true
script = ExtResource("2_xwpsc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="end1"]
shape = SubResource("CircleShape2D_1pkk1")

[node name="Sprite2D" type="Sprite2D" parent="end1"]
texture = SubResource("PlaceholderTexture2D_y20as")

[node name="uiPopOut" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.156
anchor_bottom = 0.084
offset_right = -0.52002
offset_bottom = 0.279991
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_nxki1")

[node name="ScrollContainer" type="ScrollContainer" parent="uiPopOut"]
layout_mode = 0
offset_right = 67.0
offset_bottom = 40.0
horizontal_scroll_mode = 0

[node name="Button" type="Button" parent="uiPopOut/ScrollContainer"]
layout_mode = 2
text = "Delete"

[node name="Panel" type="Panel" parent="uiPopOut"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.49296, 0.992746)

[connection signal="mouse_entered" from="Line2D/StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="Line2D/StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
[connection signal="pressed" from="uiPopOut/ScrollContainer/Button" to="uiPopOut" method="_on_button_pressed" flags=18]
